compiler/fir/analysis-tests/testData/resolveWithStdlib/properties/backingField/explicitBackingFieldsWithDelegates.kt
val thingWithDelefate by lazy { 2 <!USELESS_CAST!>as Number<!> }
    <!BACKING_FIELD_FOR_DELEGATED_PROPERTY!>field<!> = 10
